--- a/Problemascomuns.css
+++ b/Problemascomuns.css
@@ -1,3 +1,10 @@
+.logo{
+    font-weight: bold;
+    font-size: 1.5em;
+    color: white;
+  }
+
+
 body{
     background: linear-gradient(to left, #ffffff, #bed9ff);
 
@@ -5,6 +12,7 @@ body{
 
 
 }
+
 h1{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
