--- a/index.css
+++ b/index.css
@@ -1,6 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Denk+One&display=swap');
 
+.logo{
+  font-weight: bold;
+  font-size: 1.5em;
+  color: white;
+}
+
 body {
   font-family: 'Oswald', sans-serif;
   background: linear-gradient(to bottom, #ffffff, #bed9ff);
@@ -8,7 +14,6 @@ body {
   margin: 0;
   line-height: 1.6;
 }
-
 /* Navegação */
 nav {
   display: flex;
@@ -18,6 +23,7 @@ nav {
   background-color: #322d80;
   position: sticky;
   top: 0;
+
 }
 
 .Paginas {
